--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 You will get to know about muscle cars when you read these slides!
                 </p>
                 <p>
-                There a lot of cool information in these sildes that you will like!
+                There are lot of cool information in these sildes that you will like!
                 </p>
             </div>
             <div class="col-md-8 py-5">
@@ -142,7 +142,7 @@
             <div class="container text-center py-5" id="video">
                 <h2> Video </h2>
                 <iframe width="1222" height="687" src="https://www.youtube.com/embed/rh_7N3jKVeY" title="What does the 2019 Ford Mustang GT have for the FIRST TIME EVER? - Raiti's Rides" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p> The video is about a guy named Raiti talking about cars and their features about the cars and he talks about the details about the car. He also test drives the car on the road.</p> 
+                <p> The video is about a guy named Raiti talking about cars and their features about the cars and he talks about the details about the car. He also test drives the car on the road. In the video I learned a lot of things about the car and some I knew but most I learned.</p> 
         
             </div>
         </div>
